compel_lib/compel_lib.h


#define COMPEL_API __stdcall
enum compel_internal_e
{
  compel_internal_writeraw = 1,
  compel_internal_setdbgout = 2,
  compel_internal_showlines = 3,
  compel_internal_showsymtbl = 4,
  compel_internal_pause = 5,
  compel_internal_exectime = 6,
  compel_internal_preparse_failing_line = 7,
};
enum compel_errors_e
{
  compel_error_success                       = 0, 
  compel_error_symbol_undefined              = 1, 
  compel_error_syntax_error                  = 2, 
  compel_error_error_handler_continue_search = 3,
  compel_error_wrong_param_count             = 4, 
  compel_error_function_expected             = 5,
  compel_error_script_stopped                = 6,
  compel_error_symbol_redefined              = 7,
  compel_error_unknown_error                 = 8,
  compel_error_branch_handled                = 9,
  compel_error_symbol_expected               = 10,
  compel_error_wrong_param_value             = 11,
  compel_error_no_operation                  = 12,
  compel_error_invalid_extension             = 13
};
typedef struct _compel_init_t
{
  bool b_usefullns;
  bool b_dbgout_script;
  const char *script_args;
  const char *script_file;
  const char *extensions;
} compel_init_t, *p_compel_init_t;
typedef void *compel_value_t;
typedef void *compel_object_t;
typedef void *compel_script_t;
typedef void *compel_tokenizer_t;
typedef void *compel_user_context_t;
typedef int (COMPEL_API *compel_extension_init_cb_t)(compel_script_t, compel_user_context_t *);
typedef int (COMPEL_API *compel_extension_deinit_cb_t)(compel_script_t, compel_user_context_t);
typedef int (COMPEL_API *compel_lib_usercommand_cb_t)(compel_script_t, int argc, char **argv);
typedef int (COMPEL_API *compel_script_error_handler_cb_t)(compel_script_t, size_t lineno, int err);
typedef struct _lib_usercommand_info_t
{
  const char *name;
  size_t minargs;
  size_t maxargs;
  compel_lib_usercommand_cb_t cb;
  const char *desc;
  void *context;
} lib_usercommand_info_t, *p_lib_usercommand_info_t;
COMPEL_EXPORT const char *COMPEL_API compel_error_code_to_string(int lib_err);
COMPEL_EXPORT compel_value_t COMPEL_API compel_value_create(
  compel_script_t compel_script, 
  const char *varname, 
  const char *initial_value);
COMPEL_EXPORT bool COMPEL_API compel_value_destroy(
  compel_script_t compel_script, 
  const char *varname);
COMPEL_EXPORT compel_value_t COMPEL_API compel_value_find(
  compel_script_t compel_script, 
  const char *varname);
COMPEL_EXPORT void COMPEL_API compel_value_set(
  compel_script_t compel_script, 
  compel_value_t compel_value, 
  const char *value);
COMPEL_EXPORT const char * COMPEL_API compel_value_value_get(
  compel_script_t compel_script, 
  const char *val_name);
COMPEL_EXPORT bool COMPEL_API compel_value_value_set(
  compel_script_t compel_script, 
  const char *val_name,
  const char *val_val);
COMPEL_EXPORT const char * COMPEL_API compel_value_get(
  compel_script_t, 
  compel_value_t);
COMPEL_EXPORT compel_object_t COMPEL_API compel_object_create(
  compel_script_t, 
  const char *objname);
COMPEL_EXPORT bool COMPEL_API compel_object_destroy(
  compel_script_t, 
  const char *objname);
COMPEL_EXPORT compel_object_t COMPEL_API compel_object_find(
  compel_script_t, 
  const char *objname);
COMPEL_EXPORT compel_value_t COMPEL_API compel_object_add_attr(
  compel_script_t, 
  compel_object_t, 
  const char *attrname, 
  const char *initial_value);
COMPEL_EXPORT compel_value_t COMPEL_API compel_object_find_attr(
  compel_script_t, 
  compel_object_t, 
  const char *attrname);
COMPEL_EXPORT bool COMPEL_API compel_object_remove_attr(
  compel_script_t, 
  compel_object_t,
  const char *attrname);
COMPEL_EXPORT char *COMPEL_API compel_object_to_string(
  compel_script_t compel_script, 
  const char *objname);
COMPEL_EXPORT const char *COMPEL_API compel_script_get_line(
  compel_script_t compel_script,
  size_t lineno);
COMPEL_EXPORT bool COMPEL_API compel_script_set_line(
  compel_script_t compel_script,
  size_t lineno,
  const char *value);
COMPEL_EXPORT void COMPEL_API compel_script_set_lineno(
  compel_script_t,
  size_t);
COMPEL_EXPORT char *COMPEL_API compel_script_evaluate_expression(
  compel_script_t compel_script,
  const char *expr,
  bool bKeepQuotes,
  char chDelim);
COMPEL_EXPORT int COMPEL_API compel_script_get_lines_count(compel_script_t);
COMPEL_EXPORT size_t COMPEL_API compel_script_get_lineno(
  compel_script_t);
COMPEL_EXPORT compel_script_t COMPEL_API compel_script_init(
  p_compel_init_t);
COMPEL_EXPORT void COMPEL_API compel_script_deinit(
  compel_script_t);
COMPEL_EXPORT void COMPEL_API compel_script_context_set(
  compel_script_t, 
  const char *guid,
  compel_user_context_t context);
COMPEL_EXPORT compel_user_context_t COMPEL_API compel_script_context_get(
  compel_script_t compel_script,
  const char *guid);
COMPEL_EXPORT void COMPEL_API compel_script_set_error_handler(
  compel_script_t, 
  compel_script_error_handler_cb_t);
COMPEL_EXPORT int COMPEL_API compel_script_load_file(
  compel_script_t, 
  const char *filename);
COMPEL_EXPORT bool COMPEL_API compel_script_load_lines(
  compel_script_t, 
  const char *lines, 
  const char *delims);
COMPEL_EXPORT void COMPEL_API compel_script_clear_lines(
  compel_script_t);
COMPEL_EXPORT int COMPEL_API compel_script_run(
  compel_script_t);
COMPEL_EXPORT int COMPEL_API compel_script_step(compel_script_t);
COMPEL_EXPORT int COMPEL_API compel_script_interpret_line(compel_script_t, const char *);
COMPEL_EXPORT const char * COMPEL_API compel_script_avail_extensions();
COMPEL_EXPORT p_lib_usercommand_info_t COMPEL_API compel_lu_cmd_get_info(
  compel_script_t compel_script);
COMPEL_EXPORT bool COMPEL_API compel_lu_cmd_set_retval(
  compel_script_t, 
  const char *retval);
COMPEL_EXPORT int COMPEL_API compel_lu_cmd_register(
  compel_script_t, 
  p_lib_usercommand_info_t);
COMPEL_EXPORT int COMPEL_API compel_lu_cmd_register2(
  compel_script_t,
  compel_lib_usercommand_cb_t cb,
  const char *name,
  const size_t minargs,
  const size_t maxargs);
COMPEL_EXPORT int COMPEL_API compel_internal(compel_script_t, int arg1, int arg2, int arg3, int arg4);
COMPEL_EXPORT long COMPEL_API compel_parse_number(const char *value);
COMPEL_EXPORT char * COMPEL_API compel_string_create(const char *str, size_t sz);
COMPEL_EXPORT void COMPEL_API compel_string_destroy(char *str);
COMPEL_EXPORT compel_tokenizer_t COMPEL_API compel_tokenize_init(
  const char *str, 
  const char *delim, 
  const char *quote, 
  const char *escape);
COMPEL_EXPORT int COMPEL_API compel_tokenize_parse(
  compel_tokenizer_t,
  const char *str, 
  const char *delim, 
  const char *quote, 
  const char *escape);
COMPEL_EXPORT void COMPEL_API compel_tokenize_free(compel_tokenizer_t);
COMPEL_EXPORT size_t COMPEL_API compel_tokenize_parsed_count(compel_tokenizer_t);
COMPEL_EXPORT const char * COMPEL_API compel_tokenize_get(
  compel_tokenizer_t, 
  const size_t idx);
COMPEL_EXPORT const char * COMPEL_API compel_tokenize_set(
  compel_tokenizer_t, 
  const size_t idx, 
  const char *str);